Closed Bug 1296998 Opened 8 years ago Closed 8 years ago

Fix Wmaybe-uninitialized warning in nsJSEnvironment.cpp

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: JamesCheng, Assigned: JamesCheng)

Details

Attachments

(1 file)

I got 

nsJSEnvironment.cpp: 'endCCTime' may be used uninitialized in this function
nsJSEnvironment.cpp:1679:58: warning: 'endCCTime' may be used uninitialized in this function [-Wmaybe-uninitialized]

when compiling.

I think this logic can be simplified by this patch to avoid the warning.

Hi smaug,

Could you please help to review the patch?

Thank you very much.
Attachment #8783400 - Flags: review?(bugs)
Attachment #8783400 - Flags: review?(bugs) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/27f61f2b6d78
Fix Wmaybe-uninitialized warning in nsJSEnvironment.cpp. r=smaug
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/27f61f2b6d78
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: