Bug 1296998 - Fix Wmaybe-uninitialized warning in nsJSEnvironment.cpp. r=smaug

MozReview-Commit-ID: J21IuAo8Udu